# gpha-mscape-claspar

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/claspar/: bacteria.py  handle_tables.py  main.py  setup.py  virus.py
src/claspar/data/: filter_thresholds.yaml
tests/: test_bacteria.py  test_handle_tables.py  test_metadata.json  test_samplesheet.tsv  test_setup.py  test_virus.py
