[project] # Update all fields in this section
name = "ClasPar"
dynamic = ["version"]
description = "ClasPar: the friendly classifier parser that parses, filters and writes classifier results to analysis tables."
authors = [{name = "Jess Friedersdorff", email = "jess.friedersdorff@ukhsa.gov.uk"}]
requires-python = ">=3.12" # Developed in 3.14.2
dependencies = ["pandas", "pyyaml"]

[tool.setuptools.dynamic]
version = {attr = "claspar.__version__"} # Add underscore separated repo name here

[project.optional-dependencies] # Dependencies for developers only - add more if required
dev = ["ruff>=0.4.10,<0.5", "pytest", "pre-commit"] 

[build-system] # Leave this section
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts] # Update with main repo script here
claspar = "claspar.main:main"

[tool.ruff.lint] # Lint rules to follow - add or delete if required
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # comprehesnions
    "C4",
    # pathlib
    "PTH",
]

ignore = ["E501"] # Lint rules to ignore - add or remove as required

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
